# simple-triage

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  traige.py
config/: analysis_settings.json  capability_map.json  suspicious_patterns.json
src/staticprep/: __init__.py  cli.py  cli_summary.py  config.py  logging_utils.py  main.py  models.py
src/staticprep/analyzers/: behavior_correlation.py  capabilities.py  contextual_analysis.py  decision_control.py  entropy.py  evidence.py  hashes.py  imports.py  interpretation.py  iocs.py  pe.py  prioritization.py  strings.py  yara_scan.py
src/staticprep/exporters/: __init__.py  json_exporter.py  markdown_exporter.py  text_exporter.py
src/staticprep/utils/: __init__.py  encoding.py  files.py  validators.py
tests/: conftest.py  test_behavior_correlation.py  test_capabilities.py  test_decision_control.py  test_hashes.py  test_integration.py  test_iocs.py  test_pe.py  test_phase5.py  test_phase6.py  test_prioritization.py  test_strings.py  test_yara.py
tests/fixtures/rules/: powershell_rule.yar
tests/fixtures/samples/: note.txt
